5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_1330.log
== TEST (2019-03-11 15:31:39) 
-- CODE:
round (250/6)
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:31:41) 
-- CODE:
round (250/6)
-- EXECUTION TIME:
0.153163
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:30) 
-- CODE:
round (41.6666)
-- ERROR:
File "XXXX", line 3
    print(round(area,4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:31) 
-- CODE:
round (41.6666)
-- EXECUTION TIME:
0.202027
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:37) 
-- CODE:
round (41.66)
-- EXECUTION TIME:
0.233673
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:04) 
-- CODE:
print (round (250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:05) 
-- CODE:
print (round (250/6))
-- EXECUTION TIME:
0.184273
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:45) 
-- CODE:
print (round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:46) 
-- CODE:
print (round(250/6))
-- EXECUTION TIME:
0.20226
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:06) 
-- CODE:
print (round(250/6.2))
-- OUTPUT:
40
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:08) 
-- CODE:
print (round(250/6.2))
-- EXECUTION TIME:
0.199186
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
40
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:40) 
-- CODE:
print (round(41.6666667))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:41) 
-- CODE:
print (round(41.6666667))
-- EXECUTION TIME:
0.200606
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:45) 
-- CODE:
print (round(41.666666.7))
-- EXECUTION TIME:
0.202889
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print (round(41.666666.7))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:47) 
-- CODE:
print (round(41.666666.7))
-- ERROR:
File "XXXX", line 1
    print (round(41.666666.7))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:48) 
-- CODE:
print (round(41.666666.7))
-- EXECUTION TIME:
0.175134
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print (round(41.666666.7))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:56) 
-- CODE:
print(round(41.666666.7))
-- EXECUTION TIME:
0.151245
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(round(41.666666.7))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:57) 
-- CODE:
print(round(41.666666.7))
-- ERROR:
File "XXXX", line 1
    print(round(41.666666.7))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:07) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.129689
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:08) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:09) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.118524
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:10) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:39) 
-- CODE:
print(round(250/6))
-- EXECUTION TIME:
0.192099
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:39) 
-- CODE:
print(round(250/6))
-- OUTPUT:
42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:00) 
-- CODE:
print(round(41.666666.2))
-- EXECUTION TIME:
0.122747
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print(round(41.666666.2))
                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:01) 
-- CODE:
print(round(41.666666.2))
-- ERROR:
File "XXXX", line 1
    print(round(41.666666.2))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:33) 
-- CODE:
print (round(41.666666.2))
-- EXECUTION TIME:
0.117745
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print (round(41.666666.2))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:34) 
-- CODE:
print (round(41.666666.2))
-- ERROR:
File "XXXX", line 1
    print (round(41.666666.2))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:39) 
-- CODE:
print (round( 41.666666.2))
-- EXECUTION TIME:
0.183638
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print (round( 41.666666.2))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:40) 
-- CODE:
print (round( 41.666666.2))
-- ERROR:
File "XXXX", line 1
    print (round( 41.666666.2))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:29:12) 
-- CODE:
print (round()41.66)
-- ERROR:
File "XXXX", line 1
    print (round()41.66)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:29:13) 
-- CODE:
print (round()41.66)
-- EXECUTION TIME:
0.131781
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print (round()41.66)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:34) 
-- CODE:
print (round(41,666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:35) 
-- CODE:
print (round(41,666))
-- EXECUTION TIME:
0.209008
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:35) 
-- CODE:
print (round(41,666))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:41) 
-- CODE:
print (round(41))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:42) 
-- CODE:
print (round(41))
-- EXECUTION TIME:
0.158124
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:43) 
-- CODE:
print (round(41))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:11:40) 
-- CODE:
print (round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print (round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:13:15) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:18:17) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(x, n))
-- EXECUTION TIME:
0.136957
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    n=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:20:27) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(250/6))
-- EXECUTION TIME:
0.132722
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    n=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:20:36) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(x, n))
-- EXECUTION TIME:
0.196705
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    n=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:20:43) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:20:47) 
-- CODE:
x=input("Valor da conta")
n=input("numero de casas decimais")
print (round(x, n))
-- EXECUTION TIME:
0.126738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    n=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:52:45) 
-- CODE:
x=250
y=x/6
n=2
print (round(y, n))
-- EXECUTION TIME:
0.197281
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
